--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.air.flume": "https://github.com/AnImaginedReality/Flume.git",
     "com.air.nsubstitute": "https://github.com/AnImaginedReality/NSubstitute.Package.git",
+    "com.air.stylecop": "https://github.com/AnImaginedReality/StyleCop.Package.git",
     "com.unity.2d.animation": "5.0.9",
     "com.unity.2d.pixel-perfect": "4.0.1",
     "com.unity.2d.psdimporter": "4.1.2",
