--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.air.nsubstitute": "https://github.com/AnImaginedReality/NSubstitute.Package.git",
     "com.air.stylecop": "https://github.com/AnImaginedReality/StyleCop.Package.git",
     "com.unity.2d.sprite": "1.0.0",
+    "com.unity.ide.rider": "3.0.18",
     "com.unity.ide.visualstudio": "2.0.16",
     "com.unity.test-framework": "1.1.33",
     "com.unity.testtools.codecoverage": "1.1.1",
