--- a/Packages/Fluxity/Editor/AIR.Fluxity.Editor.asmdef
+++ b/Packages/Fluxity/Editor/AIR.Fluxity.Editor.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "",
     "references": [
         "AIR.Flume",
-        "AIR.Fluxity"
+        "AIR.Fluxity",
+        "Unity.Settings.Editor"
     ],
     "includePlatforms": [
         "Editor"
